# my-chess-engine

./: Board.cpp  Board.hpp  BoardTests.cpp  Move.cpp  Move.hpp  MoveGenerator.cpp  main.cpp  test.cpp
src/: Board.cpp  Board.hpp  BoardConstants.hpp  BoardTests.cpp  CMakeLists.txt  Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  main.cpp
src/tests/: board_tests.cpp  move_generator_tests.cpp  perft_tests.cpp  tests.cpp
